ap-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tofu-sample-app
spec:
  type: NodePort
  selector:
    app: tofu-sample-app
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tofu-sample-app
  labels:
    app: tofu-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tofu-sample-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tofu-sample-app
    spec:
      containers:
      - image: aoi1/tofu-sample-app
        name: tofu-sample-app
        ports:
        - containerPort: 3000
          name: tofu-sample-app
